add files with inital mapping for fucntion

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 /ft_printf/srcs/.DS_Store
+/ft_printf/.DS_Store
 /.DS_Store
+
 /ft_printf.pdf
+
+/ft_printf/a.out
+
+/ft_printf/includes/ft_printf.h.gch
+/ft_printf/includes/libft.h.gch
+
+/test/a.out
