--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -10,7 +10,8 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME = libftprintf.a
+# NAME = libftprintf.a
+NAME = libftprintf
 
 SRCS =  srcs/ft_isalpha.c srcs/ft_isdigit.c srcs/ft_isalnum.c srcs/ft_isascii.c \
 		srcs/ft_isprint.c srcs/ft_strlen.c srcs/ft_memset.c srcs/ft_bzero.c \
@@ -20,7 +21,9 @@ SRCS =  srcs/ft_isalpha.c srcs/ft_isdigit.c srcs/ft_isalnum.c srcs/ft_isascii.c 
 		srcs/ft_strlcat.c srcs/ft_strdup.c srcs/ft_calloc.c srcs/ft_atoi.c \
 		srcs/ft_substr.c srcs/ft_strjoin.c srcs/ft_strtrim.c srcs/ft_split.c \
 		srcs/ft_itoa.c srcs/ft_strmapi.c srcs/ft_striteri.c srcs/ft_putchar_fd.c \
-		srcs/ft_putstr_fd.c srcs/ft_putendl_fd.c srcs/ft_putnbr_fd.c
+		srcs/ft_putstr_fd.c srcs/ft_putendl_fd.c srcs/ft_putnbr_fd.c \
+		characters.c conversion.c flags.c handle_specifiers.c hexadecimal.c legend.c \
+		numbers.c struct.c
 
 
 OBJS =  ft_isalpha.o ft_isdigit.o ft_isalnum.o ft_isascii.o ft_isprint.o \
@@ -29,6 +32,8 @@ OBJS =  ft_isalpha.o ft_isdigit.o ft_isalnum.o ft_isascii.o ft_isprint.o \
 		ft_strlcpy.o ft_strnstr.o ft_strlcat.o ft_strdup.o ft_calloc.o ft_atoi.o \
 		ft_substr.o ft_strjoin.o ft_strtrim.o ft_split.o ft_itoa.o ft_strmapi.o \
 		ft_striteri.o ft_putchar_fd.o ft_putstr_fd.o ft_putendl_fd.o ft_putnbr_fd.o
+		characters.oo conversion.o flags.o handle_specifiers.o hexadecimal.o legend.o \
+		numbers.o struct.o
 
 DEPS = -Iincludes/libft.h -Iincludes/ft_printf.h
 
@@ -39,10 +44,10 @@ CFLAGS = -Wall -Werror -Wextra $(DEPS)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-		ar rcs $(NAME) $(OBJS)
+# ar rcs $(NAME) $(OBJS)
 
 $(OBJS): $(SRCS)
-		$(CC) $(CFLAGS) -c $(SRCS)
+		$(CC) $(CFLAGS) $(SRCS)
 
 clean:
 		rm -f $(OBJS)
