--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jebouche <jebouche@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/25 15:56:42 by jebouche          #+#    #+#              #
-#    Updated: 2022/11/08 15:03:30 by jebouche         ###   ########.fr        #
+#    Updated: 2023/03/07 16:32:33 by jebouche         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,28 +17,25 @@ SRCS =  ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 		ft_strchr.c ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_memmove.c \
 		ft_strlcpy.c ft_strnstr.c ft_strlcat.c ft_strdup.c ft_calloc.c ft_atoi.c \
 		ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
-		ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+		ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+		ft_lstsize.c ft_lstnew.c ft_lstmap.c ft_lstlast.c ft_lstiter.c ft_lstdelone.c \
+		ft_lstclear.c ft_lstadd_front.c ft_lstadd_back.c
 
+OBJS = $(SRCS:.c=.o)
 
-OBJS =  ft_isalpha.o ft_isdigit.o ft_isalnum.o ft_isascii.o ft_isprint.o \
-		ft_strlen.o ft_memset.o ft_bzero.o ft_memcpy.o ft_toupper.o ft_tolower.o \
-		ft_strchr.o ft_strrchr.o ft_strncmp.o ft_memchr.o ft_memcmp.o ft_memmove.o \
-		ft_strlcpy.o ft_strnstr.o ft_strlcat.o ft_strdup.o ft_calloc.o ft_atoi.o \
-		ft_substr.o ft_strjoin.o ft_strtrim.o ft_split.o ft_itoa.o ft_strmapi.o \
-		ft_striteri.o ft_putchar_fd.o ft_putstr_fd.o ft_putendl_fd.o ft_putnbr_fd.o
-
-DEPS = libft.h
+DEPS = libft.h ft_printf.h
 
 CC = cc
 
-CFLAGS = -Wall -Werror -Wextra -I$(DEPS)
+CFLAGS = -Wall -Werror -Wextra -I. -g
 
 all: $(NAME)
 
-$(NAME):
-		$(CC) $(CFLAGS) -c $(SRCS)
-		ar rc $(NAME) $(OBJS)
-		ranlib $(NAME)
+$(NAME): $(OBJS)
+		ar rcs $(NAME) $(OBJS)
+		
+%.o: %.c $(DEPS)
+		$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 		/bin/rm -f $(OBJS)
